--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@crowdin/ota-client": "^1.1.1",
     "crc-32": "^1.2.2",
     "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
