--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@deriv-com/localisation",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest ./src/__tests__/*.test.tsx",
+    "test:scripts": "vitest ./src/scripts/__tests__/*.test.js --environment node",
     "messages:extract": "lingui extract",
     "messages:compile": "lingui compile",
     "preview": "vite preview"
   },
   "dependencies": {
     "@crowdin/ota-client": "^1.1.1",
+    "@xmldom/xmldom": "^0.8.10",
     "crc-32": "^1.2.2",
     "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -22,6 +24,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -30,7 +35,9 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^1.3.1"
   }
 }
