--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "name": "@deriv-com/localisation",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/main.js",
+  "exports": {
+    ".": {
+      "import": "./dist/main.js",
+      "types": "./dist/main.d.ts"
+    }
+  },
   "private": true,
   "version": "0.0.1",
   "scripts": {
@@ -8,19 +19,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest ./src/__tests__/*.test.tsx",
     "test:scripts": "vitest ./src/scripts/__tests__/*.test.js --environment node",
-    "messages:extract": "lingui extract",
-    "messages:compile": "lingui compile",
+    "prepublishOnly": "npm run build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@crowdin/ota-client": "^1.1.1",
-    "@xmldom/xmldom": "^0.8.10",
-    "crc-32": "^1.2.2",
-    "i18next": "^23.7.18",
-    "i18next-browser-languagedetector": "^7.2.0",
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -32,12 +36,20 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "crc-32": "^1.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "glob": "^10.3.10",
+    "i18next": "^23.7.18",
+    "i18next-browser-languagedetector": "^7.2.0",
     "jsdom": "^24.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-dts": "^3.7.3",
     "vitest": "^1.3.1"
   }
 }
