--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": false,
   "version": "0.0.1",
   "scripts": {
-    "dev": "npm run build && vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest ./src/__tests__/*.test.tsx",
