--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest ./src/__tests__/*.test.tsx",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run test && npm run build"
   },
   "peerDependencies": {
     "react": "^17.x || ^18.x",
@@ -41,7 +41,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "glob": "^10.3.10",
     "i18next": "^23.7.18",
-    "i18next-browser-languagedetector": "^7.2.0",
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
