--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   },
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
