--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -3,7 +3,7 @@ on:
     release:
         types: [published]
     push:
-        branches: [main]
+        branches: [master]
 
 permissions:
   contents: read # for checkout
