--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -28,7 +28,5 @@ jobs:
         run: npm install --global npm
       - name: Install dependencies
         run: npm clean-install
-      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
-        run: npm audit signatures
-      - name: Prepublish
-        run: npm run prepublish
+      - name: Run the tests
+        run: npm run test
