--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest ./src/__tests__/*.test.tsx",
-    "prepublishOnly": "npm run test && npm run build"
+    "prepublish": "npm run test && npm run build"
   },
   "peerDependencies": {
     "react": "^17.x || ^18.x",
