fix: replace cleaninstall

--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Update to latest npm (temporary fix for audit below)
         run: npm install --global npm
       - name: Install dependencies
-        run: npm clean-install
+        run: npm install
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
       - name: Run the tests
