--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.7.3",
     "vitest": "^1.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.17.1"
   }
 }
