--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "extract-translations": "./scripts/extract-translations.js"
+    "extract-translations": "./dist/extract-translations.cjs"
   },
   "exports": {
     ".": {
@@ -19,7 +19,7 @@
   "version": "0.0.2-development",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp ./src/scripts/extract-translations.cjs ./dist/extract-translations.cjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest ./src/__tests__/*.test.tsx",
     "prepublish": "npm run test && npm run build"
@@ -48,7 +48,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "glob": "^10.3.10",
+    "glob": "^10.3.12",
     "i18next": "^23.7.18",
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
