fix: module resolution issue on script

--- a/package.json
+++ b/package.json
@@ -42,13 +42,9 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@xmldom/xmldom": "^0.8.10",
-    "commander": "^12.0.0",
-    "crc-32": "^1.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "glob": "^10.3.12",
     "i18next": "^23.7.18",
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
@@ -62,5 +58,11 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.17.1"
+  },
+  "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
+    "commander": "^12.0.0",
+    "crc-32": "^1.2.2",
+    "glob": "^10.3.12"
   }
 }
