--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "private": false,
-  "version": "0.0.2-development",
+  "version": "1.0.3",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && cp ./src/scripts/extract-translations.cjs ./dist/extract-translations.cjs",
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
+    "commander": "^12.0.0",
     "crc-32": "^1.2.2",
     "glob": "^10.3.12"
   }
