--- a/.github/actions/extract_and_sync_translations/action.yml
+++ b/.github/actions/extract_and_sync_translations/action.yml
@@ -2,6 +2,10 @@ name: Sync Translations with CloudFlare
 description: Sync Crowdin translations of desired environment with cloudflare
 
 inputs:
+  PROJECT_SOURCE_DIRECTORY:
+    description: "Project source directory"
+    default: "./src"
+    required: false
   CROWDIN_BRANCH_NAME:
     description: "Running on production, test or staging etc"
     default: "crowdin"
@@ -34,15 +38,15 @@ runs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '20'
+        node-version: "20"
 
     - name: Install dependencies
       shell: bash
-      run: npm install crc-32
+      run: npm clean-install
 
     - name: Run script
       shell: bash
-      run: npx run-url https://raw.githubusercontent.com/deriv-com/translations/master/scripts/extract-translations.js
+      run: deriv-extract-translations ${{ inputs.PROJECT_SOURCE_DIRECTORY }} --verbose
 
     - name: Crowdin pull action to download translations
       uses: crowdin/github-action@v1
