--- a/.github/actions/extract_and_sync_translations/action.yml
+++ b/.github/actions/extract_and_sync_translations/action.yml
@@ -64,7 +64,7 @@ runs:
     - name: Crowdin pull action to download translations
       uses: crowdin/github-action@v1
       with:
-        upload_sources: false
+        upload_sources: true
         upload_translations: false
         download_translations: true
         create_pull_request: false
